[gd_scene load_steps=5 format=3 uid="uid://dqb2n6sadssyu"]

[ext_resource type="Script" path="res://Scenes/How to Play Menu.gd" id="1_bvo52"]
[ext_resource type="Texture2D" uid="uid://c7vjhi35m78nu" path="res://Art/Button5.png" id="1_fpce2"]
[ext_resource type="FontFile" uid="uid://pwg2u1lrabc3" path="res://Fonts/Fairy Font.ttf" id="2_a7ern"]
[ext_resource type="VideoStream" path="res://Videos/How to Play Video.ogv" id="3_deul4"]

[node name="How to Play Node" type="Node"]
script = ExtResource("1_bvo52")
howToPlayMenuFont = ExtResource("2_a7ern")

[node name="How to Play Video" type="VideoStreamPlayer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_deul4")

[node name="How to Play Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 30.0
offset_right = 40.0
offset_bottom = 53.0
grow_horizontal = 2

[node name="Back Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -230.0
offset_right = 8.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
icon = ExtResource("1_fpce2")

[node name="Back Text" type="Label" parent="Back Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[connection signal="mouse_entered" from="Back Button" to="." method="IfBackButtonIsHoveredByMouse"]
[connection signal="mouse_exited" from="Back Button" to="." method="IfBackButtonIsExitedByMouse"]
[connection signal="pressed" from="Back Button" to="." method="IfBackButtonIsPressed"]
